--- a/Hiqh Quality Code/Unit Testing/Unit Testing/Homework/Unit Testing/Scool.Tests/Scool.Tests.csproj
+++ b/Hiqh Quality Code/Unit Testing/Unit Testing/Homework/Unit Testing/Scool.Tests/Scool.Tests.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CourseTests.cs" />
     <Compile Include="StudentTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
