Finished Testing School.csproj

--- a/Hiqh Quality Code/Unit Testing/Unit Testing/Homework/Unit Testing/School/Scool.Tests/Scool.Tests.csproj
+++ b/Hiqh Quality Code/Unit Testing/Unit Testing/Homework/Unit Testing/School/Scool.Tests/Scool.Tests.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="CourseTests.cs" />
+    <Compile Include="SchoolTests.cs" />
     <Compile Include="StudentTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
