--- a/Niki/Niki.csproj
+++ b/Niki/Niki.csproj
@@ -50,7 +50,7 @@
     <Compile Include="InvalidArgumentException.cs" />
     <Compile Include="Laptop.cs" />
     <Compile Include="LaptopBattery.cs" />
-    <Compile Include="Rammstein.cs" />
+    <Compile Include="Ram.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Type.cs" />
