--- a/Niki/Niki.csproj
+++ b/Niki/Niki.csproj
@@ -43,7 +43,10 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Computer.cs" />
+    <Compile Include="ComputerTypes\Computer.cs" />
+    <Compile Include="ComputerTypes\Laptop.cs" />
+    <Compile Include="ComputerTypes\PersonalComputer.cs" />
+    <Compile Include="ComputerTypes\Server.cs" />
     <Compile Include="Cpu.cs" />
     <Compile Include="HardDriver.cs" />
     <Compile Include="IMotherboard.cs" />
@@ -53,7 +56,6 @@
     <Compile Include="Ram.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Type.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
