--- a/Niki/Niki.csproj
+++ b/Niki/Niki.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{920382DC-166F-4C55-8AF7-70D668191107}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Computers.UI.Console</RootNamespace>
+    <RootNamespace>Computers.UI</RootNamespace>
     <AssemblyName>Computers.UI.Console</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -52,6 +52,9 @@
     <Compile Include="IMotherboard.cs" />
     <Compile Include="InvalidArgumentException.cs" />
     <Compile Include="LaptopBattery.cs" />
+    <Compile Include="Manufacturers\DellComputerFactory.cs" />
+    <Compile Include="Manufacturers\HpComputerFactory.cs" />
+    <Compile Include="Manufacturers\IComputerFactory.cs" />
     <Compile Include="Ram.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
